add the latest hdp 2.2 build config